Source/WebCore/rendering/RenderObject.cpp
@@ -3001,46 +3001,46 @@ void RenderObject::imageChanged(CachedImage* image, const IntRect* rect)
     imageChanged(static_cast<WrappedImagePtr>(image), rect);
 }
 
-RenderBoxModelObject* RenderObject::offsetParent() const
+Element* RenderObject::offsetParent() const
 {
-    // If any of the following holds true return null and stop this algorithm:
-    // A is the root element.
-    // A is the HTML body element.
-    // The computed value of the position property for element A is fixed.
-    if (isRoot() || isBody() || (isOutOfFlowPositioned() && style()->position() == FixedPosition))
+    if (isRoot() || isBody())
+        return 0;
+
+    if (isOutOfFlowPositioned() && style()->position() == FixedPosition)
         return 0;
 
     // If A is an area HTML element which has a map HTML element somewhere in the ancestor
     // chain return the nearest ancestor map HTML element and stop this algorithm.
     // FIXME: Implement!
 
-    // FIXME: Stop the search at the flow thread boundary until we figure out the right
-    // behavior for elements inside a flow thread.
+    // FIXME: Figure out the right behavior for elements inside a flow thread.
     // https://bugs.webkit.org/show_bug.cgi?id=113276
-    
-    // Return the nearest ancestor element of A for which at least one of the following is
-    // true and stop this algorithm if such an ancestor is found:
-    //     * The computed value of the position property is not static.
-    //     * It is the HTML body element.
-    //     * The computed value of the position property of A is static and the ancestor
-    //       is one of the following HTML elements: td, th, or table.
-    //     * Our own extension: if there is a difference in the effective zoom
 
-    bool skipTables = isPositioned();
-    float currZoom = style()->effectiveZoom();
-    RenderObject* curr = parent();
-    while (curr && (!curr->node() || (!curr->isPositioned() && !curr->isBody())) && !curr->isRenderNamedFlowThread()) {
-        Node* element = curr->node();
-        if (!skipTables && element && (element->hasTagName(tableTag) || element->hasTagName(tdTag) || element->hasTagName(thTag)))
+    float effectiveZoom = style()->effectiveZoom();
+    Node* node = 0;
+    for (RenderObject* ancestor = parent(); ancestor; ancestor = ancestor->parent()) {
+        node = ancestor->node();
+
+        // Spec: http://www.w3.org/TR/cssom-view/#offset-attributes
+
+        if (!node)
+            continue;
+
+        if (ancestor->isPositioned())
             break;
 
-        float newZoom = curr->style()->effectiveZoom();
-        if (currZoom != newZoom)
+        if (node->hasTagName(HTMLNames::bodyTag))
             break;
-        currZoom = newZoom;
-        curr = curr->parent();
+
+        if (!isPositioned() && (node->hasTagName(tableTag) || node->hasTagName(tdTag) || node->hasTagName(thTag)))
+            break;
+
+        // Webkit specific extension where offsetParent stops at zoom level changes.
+        if (effectiveZoom != ancestor->style()->effectiveZoom())
+            break;
     }
-    return curr && curr->isBoxModelObject() && !curr->isRenderNamedFlowThread() ? toRenderBoxModelObject(curr) : 0;
+
+    return node && node->isElementNode() ? toElement(node) : 0;
 }
 
 VisiblePosition RenderObject::createVisiblePosition(int offset, EAffinity affinity)
